  - Fixed SF.net bug #1100805: Standard calling convention does not check
    whether function name is null.
  - Small style improvements.
  - Added constructor to class InvalidRequestException that only accepts a
    message and no cause exception.

* Generation of server-side Java code:
  - Fixed SF.net bug #1100792: Conflicting duplicate names for input param
    'ip'.

* Tests:
  - Added performance tests. Execute the "perftests" ant target to execute the
    test.
  - Changed localhost to 127.0.0.1.

* Examples
  - Fixed incorrect DTD declaration.

* Build and release process:
  - Added property "tests.deprecation" that controls whether deprecation
    warnings should be displayed when compiling the unit tests.

* DTD:
  - Restricted Logdoc translations file DTD to only allow exception-property
    to refer to the class or the message.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.1.0 BETA 1:

* XINS/Java Common Library:
  - Fixed SF.net bug #1099406: ProgrammingError should be RuntimeException.
    Replaced class ProgrammingError with class ProgrammingException and
    changed code accordingly.

* XINS/Java Client Framework:
  - Impact of fix for SF.net bug #1099406: Class ProgrammingError was replaced
    with class ProgrammingException. Changed the code accordingly.

* XINS/Java Server Framework:
  - Fixed SF.net bug #1099473: Pattern for incoming parameters breaks
    compatibility. The change has been reverted. It is scheduled for
    re-introduction in XINS 2.0.0.
  - Impact of fix for SF.net bug #1099406: Class ProgrammingError was replaced
    with class ProgrammingException. Changed the code accordingly.
  - Only the "_function" parameter is supported when using either the standard
    or the XML calling convention. The "function" parameter is treated as a
    normal parameter.
  - The XML is first generated on a StringWriter and its content is sent to